# mx-escrow

./: .gitignore  README.md  package-lock.json
mx-escrow-contract/: Cargo.toml
mx-escrow-contract/meta/: Cargo.toml
mx-escrow-contract/src/: lib.rs
mx-escrow-contract/tests/: escrow_contract_test.rs
mx-escrow-front/app/: page.tsx
